# pFaces-PIRK

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  build.bat  build.sh  ctmm-quickie.sh  modify_all_tests.sh  pFaces-PIRK.sln  pFaces-PIRK.vcxproj  pFaces-PIRK.vcxproj.filters  results_tesla_200mil.txt  run_ex_identity.sh  run_ex_n_link.sh  run_ex_tridiag.sh  run_speed_test_ctmm.sh  run_speed_test_gb.sh  run_speed_test_mc.sh  run_test_config.sh  test.bat  test.sh  testo.cl
Default/: makefile  objects.mk  sources.mk
Default/kernel/: pirk.d  subdir.mk
ex_identity/: bounds.cl  dynamics.cl  ex_identity.cfg  growth_bound_matrix.cl
ex_n_link/: dynamics.cl  ex_n_link.cfg  growth_bound_matrix.cl  jacobian_bounds.cl
ex_tridiag/: bounds.cl  dynamics.cl  ex_tridiag.cfg
examples/: ctmm-quickie.sh  modify_all_tests.sh  run_ex_100000_link.bat  run_ex_n_link.bat  run_ex_n_link.sh  run_ex_tridiag.sh  run_speed_test_ctmm.sh  run_speed_test_gb.sh  run_speed_test_mc.sh  run_test_config.sh  test  test.bak  win_C1_out.txt  win_out.txt
examples/cav2020_TIRA/: README.md
examples/common/: sparse_matrix_tester  sparse_matrix_tester.cpp
examples/ex_heat_diffusion/: bounds.cl  dynamics.cl  ex_heat_eqn.cfg  growth_bound_matrix.cl  jacobian_bounds.cl  run_gb_1b.sh
examples/ex_n_link/: before_subbuffers_win_out.txt  dynamics.cl  ex_n_link.cfg  growth_bound_matrix.cl  out.txt  run_ex_n_link.sh  showResult.m
examples/ex_n_link_me/: ex_n_link.cfg  jacobian_bounds.cl  run_ex_n_link.bat  run_ex_n_link.sh
examples/ex_n_links/: bounds.cl  dynamics.cl  ex_n_link.cfg  growth_bound_matrix.cl  jacobian_bounds.cl  mc_speed_test.sh  results.txt  results_ctmm.txt  results_ctmm_M60.txt  results_ctmm_m4.10xlarge.txt  results_ctmm_p3.txt  results_gb.txt  results_gb_M60.txt  results_gb_V100.txt  results_gb_m4.10xlarge.txt  results_mc.txt  results_mc_g3.txt  results_mc_m4.txt  results_mc_p3.txt  run_ctmm.bat  run_ctmm.sh  run_ctmm_speed_test.bat  run_ctmm_speed_test.sh  run_gb.bat  run_gb_me.bat  run_gb_me.sh  run_gb_speed_test.bat  run_gb_speed_test.sh  run_mc.bat  run_mc.sh  run_mc_10000.bat  run_mc_speed_test.bat  run_mc_speed_test.sh  run_mchd.bat  run_mchd.sh  run_mchd_10000.bat  run_mchd_speed_test.bat  run_mchd_speed_test.sh  showResult_ctmm.m  showResult_mc.m  (+2 more)
examples/ex_nonlinear_pde/: bounds.cl  dynamics.cl  ex_nonlinear_pde.cfg  ex_quadrotor_swarm.cfg  growth_bound_matrix.cl  jacobian_bounds.cl  run_ex_nonlinear_pde.sh
examples/ex_quad_apf/: bounds.cl  dynamics.cl  ex_quad_apf.cfg  growth_bound_matrix.cl  jacobian_bounds.cl  rs.sh  run_ctmm_speed_test.bat  run_ctmm_speed_test.sh  run_ex_quad_apf.bat  run_ex_quad_apf.sh  run_gb_speed_test.bat  run_gb_speed_test.sh  run_mc_speed_test.bat  run_mc_speed_test.sh
examples/ex_quadrotor_swarm/: bounds.cl  dynamics.cl  ex_quadrotor_swarm.cfg  growth_bound_matrix.cl  jacobian_bounds.cl  results_ctmm_c5.txt  results_ctmm_g3.txt  results_ctmm_m4.txt  results_ctmm_p3.txt  results_gb_g3.txt  results_gb_p3.txt  results_mc_c5.txt  results_mc_g3.txt  results_mc_p3.txt  run_ctmm_speed_test.bat  run_ctmm_speed_test.sh  run_gb_speed_test.bat  run_gb_speed_test.sh  run_mc_speed_test.bat  run_mc_speed_test.sh  speed_test_gb.bat  speed_test_gb.sh
examples/ex_tridiag/: bounds.cl  ex_tridiag.cfg  (+2 more)
interface/: pirkDataFile.m
kernel/: Makefile  pirk.cpp  pirk.h  pirk_ctmm.cpp  pirk_growthbound.cpp  pirk_io.cpp  pirk_montecarlo.cpp  pirk_montecarlo_hd.cpp  pirk_utils.cpp
kernel-pack/: config.defaults  config.template  dynamics_body.cl  initialize.cl  pirk.cpu.cl  pirk.cpu.cl.render  pirk.driver  pirk.gpu.cl  pirk.hwa.cl  pirk.mem  pirk_utils.cl  rk4.cl
speed_test_ctmm/: results.txt
speed_test_gb/: gb-speed-test-results-gen9.txt  results.txt
speed_test_mc/: results.txt
test_config/: bounds.cl  dynamics.cl  test_config.cfg
(+478 files in other folders)
